# napi-rs

crates/cli/: Cargo.toml
crates/cli/src/: build.rs  main.rs  new.rs  util.rs
crates/cli/src/util/: target.rs
